--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "填上一句你想填的话，在index.html中更改"
+description: "越山並得能州景，遮莫家鄉憶遠征"
 ---
 
 {% for post in paginator.posts %}
